--- a/index.html
+++ b/index.html
@@ -6,17 +6,23 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Nick Kochornswasdi GALLERY</title>
+        <title>nick kochornswasdi GALLERY</title>
         <meta name="description" content="A contemporary art gallery based in Los Angeles showing new and emerging artists">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/styles.css" type="text/css">
+        <link rel="icon" href="favicon.ico">
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
-        <h1>nick kochornswasdi gallery</h1>
+        <header>
+            <marquee><h1>nick kochornswasdi gallery</h1></marquee>
+        </header>
+        <main>
+            <p>coming soon! :P</p>
+        </main>
+        
         
         <script src="" async defer></script>
     </body>
