--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="description" content="A contemporary art gallery based in Los Angeles showing new and emerging artists">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/styles.css" type="text/css">
-        <link rel="icon" href="favicon.ico">
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     </head>
     <body>
         <!--[if lt IE 7]>
