Initial finished site

--- a/index.html
+++ b/index.html
@@ -26,10 +26,17 @@
         </header>
 
         <main>
-
+            <nav>
+                <ul>
+                    <li><a href="artists.html">artists</a></li>
+                    <li><a href="exhibitions.html">exhibitions</a></li>
+                    <li><a href="about.html">about</a></li>
+                    <li><a href="contact.html">contact</a></li>
+                </ul>
+            </nav>
         </main>
         <footer>
-            <p>still coming soon, hold ur horses : P</p>
+            
         </footer>
 
         
