Lots of changes : (

--- a/exhibitions.html
+++ b/exhibitions.html
@@ -27,6 +27,7 @@
     <main>
         <nav>
             <ul>
+                <li><a href="index.html">home</a></li>
                 <li><a href="artists.html">artists</a></li>
                 <li><a href="exhibitions.html">exhibitions</a></li>
                 <li><a href="about.html">about</a></li>
@@ -34,22 +35,29 @@
             </ul>
         </nav>
     </main>
+    <div class="top-bar">
+        <ul>
+            <li><a href="exhibitions.html">current</a></li>
+            <li><a href="exhibitions/02.html">upcoming</a></li>
+            <li><a href="exhibitions/past.html">past</a></li>
+        </ul>
+    </div>
     <div class="content">
         <ul>
             <li>
-                <h2>previous:</h2>
-                <a href="exhibitions/01.html">
-                    <p>philipp FARRA</p>
-                    <p>inaugurational speeches</p>
-                    <p>april 28 - may 26 2019</p>
+                <h1>site 1</h1>
+                <h2>upcoming:</h2>
+                <a href="exhibitions/tba.html">
+                    <p>TBA</p>
                 </a>
             </li>
             <li>
-                <h2>current:</h2>
-                <a href="exhibitions/tba.html">
-                    <p>TBA</p>
-                
-                
+                <h1>site 2</h1>
+                <h2>upcoming:</h2>
+                <a href="exhibitions/02.html">
+                    <p>diego BARRIENTOS</p>
+                    <p>paintings by diego</p>
+                    <p>august 3 - september 8 2019</p>
                 </a>
             </li>
         </ul>
