--- a/about.html
+++ b/about.html
@@ -27,6 +27,7 @@
     <main>
         <nav>
             <ul>
+                <li><a href="index.html">home</a></li>
                 <li><a href="artists.html">artists</a></li>
                 <li><a href="exhibitions.html">exhibitions</a></li>
                 <li><a href="about.html">about</a></li>
