--- a/exhibitions/past.html
+++ b/exhibitions/past.html
@@ -9,10 +9,10 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>artists - nick kochornswasdi GALLERY</title>
+    <title>exhibitions - nick kochornswasdi GALLERY</title>
     <meta name="description" content="A contemporary art gallery based in Los Angeles showing new and emerging artists">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/styles.css" type="text/css">
+    <link rel="stylesheet" href="/css/styles.css" type="text/css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:900i&display=swap" rel="stylesheet">
 </head>
@@ -27,25 +27,31 @@
     <main>
         <nav>
             <ul>
-                <li><a href="index.html">home</a></li>
-                <li><a href="artists.html">artists</a></li>
-                <li><a href="exhibitions.html">exhibitions</a></li>
-                <li><a href="about.html">about</a></li>
-                <li><a href="contact.html">contact</a></li>
+                <li><a href="/index.html">home</a></li>
+                <li><a href="/artists.html">artists</a></li>
+                <li><a href="/exhibitions.html">exhibitions</a></li>
+                <li><a href="/about.html">about</a></li>
+                <li><a href="/contact.html">contact</a></li>
             </ul>
         </nav>
-
-        <div class="content">
-            <ul>
-                <li>
-                    <a href="artists/philipp_farra.html">philipp FARRA</a>
-                </li>
-            </ul>
-
-        </div>
     </main>
+    <div class="top-bar">
+        <ul>
+            <li><a href="/exhibitions.html">current</a></li>
+            <li><a href="02.html">upcoming</a></li>
+            <li><a href="past.html">past</a></li>
+        </ul>
+    </div>
+    <div class="content">
+        <ul>
+            <li>
+               <p><a href="01.html">2019 - philipp FARRA: inaugurational speeches. april 28 - may 26. site 1</a></p>
+            </li>
+        </ul>
+
+    </div>
     <footer>
-        
+
     </footer>
 
 
