Commit after diego's show, before bootstrap

--- a/about.html
+++ b/about.html
@@ -35,9 +35,18 @@
             </ul>
         </nav>
         <div class="content">
-            <p>nick kochornswasdi GALLERY is a gallery dedicated to contemporary art by
-                new and emerging artists located in Los Angeles and around the world.
-            </p>
+            <ul>
+                <li>
+                    <h1>site 1</h1>
+                    <p>coming soon!</p>
+                </li>
+                <li>
+                    <h1>site 2</h1>
+                    <p>7931 Nannestad St</p>
+                    <p>Rosemead, CA 91770</p><br>
+                    <p>Gallery hours are Saturdays and Sundays 11am-5pm, by appointment only.</p>
+                </li>
+            </ul>
         </div>
     </main>
 
