--- a/exhibitions/02.html
+++ b/exhibitions/02.html
@@ -73,7 +73,7 @@
                     </p>
 
                     <p>
-                        Paintings by Diego comprises a series of self-portraits created from 2018 to 2019. As the exhibition title’s literalness
+                        <em>Paintings by Diego</em> comprises a series of self-portraits created from 2018 to 2019. As the exhibition title’s literalness
                         suggests, it is an exhibition of Barrientos’ paintings. Questioning his relationship between the self and the work,
                         Barrientos frequently uses and presents his work as an actual product that one would use for comfort, warmth, and
                         protection. Implying the work is deeply personal while still being straightforwardly accessible. The paintings remain
@@ -91,10 +91,10 @@
 
                     <p>
                         Diego Barrientos (b. 1987, Guatemala City, Guatemala) received his MFA from the California Institute of the Arts in 2019
-                        and a BA from California State University, Northridge in 2016. Recent exhibitions include Alienation, L-Shape Gallery,
-                        CalArts, Valencia, CA (2019); And Then There is California, Santa Monica, CA (2019); Other Places Art Fair, San Pedro,
-                        CA (2019); and Incognito, Institute of Contemporary Art, Los Angeles, CA (2018). Forthcoming exhibition includes The
-                        Life Cycle of Intimacy, New Wight Gallery, Los Angeles, CA. He currently lives and works in Los Angeles.
+                        and a BA from California State University, Northridge in 2016. Recent exhibitions include <em>Alienation</em>, L-Shape Gallery,
+                        CalArts, Valencia, CA (2019); <em>And Then There is California</em>, Santa Monica, CA (2019); <em>Other Places Art Fair</em>, San Pedro,
+                        CA (2019); and <em>Incognito</em>, Institute of Contemporary Art, Los Angeles, CA (2018). Forthcoming exhibition includes <em>The
+                        Life Cycle of Intimacy</em>, New Wight Gallery, Los Angeles, CA. He currently lives and works in Los Angeles.
                     </p>
                     
                     <p>
