--- a/artists/philipp_farra.html
+++ b/artists/philipp_farra.html
@@ -38,7 +38,7 @@
         <div class="content">
             <h1 class="artist_name">philipp FARRA</h1>
             <p>
-                bio coming soon don't u worry ; )
+                coming soon!
             </p>
         </div>
     </main>
