Added more philipp photos and bio

--- a/artists/philipp_farra.html
+++ b/artists/philipp_farra.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="/css/styles.css" type="text/css">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:900i&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -37,9 +38,47 @@
         </nav>
         <div class="content">
             <h1 class="artist_name">philipp FARRA</h1>
-            <p>
-                coming soon!
-            </p>
+            <div class="description">
+                <p>
+                    Philipp Farra (b. 1991, Schönebeck (Elbe), Germany), studied at Grundschule Käthe Kollwitz, Schönebeck, Germany;
+                    Ökumenisches Domgymnasium, Magdeburg, Germany; Academy of Visual Arts Leipzig, Leipzig, Germany; HEAD, Geneva,
+                    Switzerland; and Academy of Fine Arts, Vienna, Austria prior to earning his MFA from the California Institute of the
+                    Arts. Farra will be a participant for the 2019–2020 Whitney Independent Study Studio Program at The Whitney Museum of
+                    American Art, New York. He currently lives and works in Los Angeles, New York and Leipzig.
+                </p>
+
+                <p>
+                    <br>Selected Exhibitions
+                </p>
+                <p>
+                    2019<br>
+                    <em>Haunts</em>, Location To be Announced, Los Angeles, CA (forthcoming)<br>
+                    <em>Inaugurational Speeches</em>, Nick Kochornswasdi Gallery, Los Angeles, CA<br>
+                    <em>(Building a Temporal Distance) or he traveled the same way the objects did</em>, A402 Gallery, California Institute of the
+                    Arts, Valencia, CA<br>
+                </p>
+                <p>
+                    2017<br>
+                    <em>Domestic Environment</em>, D-300 Gallery, California Institute of the Arts, Valencia, CA<br>
+                    <em>Joel</em>, Luis Leu, Karlsruhe, Germany<br>
+                </p>
+                <p>
+                    2015<br>
+                    fremd (alien), Grassimuseum für Völkerkunde, Leipzig, Germany<br>
+                </p>
+                <p>
+                    2014<br>
+                    <em>MoMA PS2</em>, LIABTA, Leipzig, Germany<br>
+                </p>
+            </div>
+            <div class="featured-works">
+                <h3>Featured Works</h3>
+                <div class="pictures">
+                    <img src="/exhibitions/01/8._Page_1.jpg">
+                    <img src="/exhibitions/01/8._Page_2.jpg">
+                </div>
+            </div>
+                
         </div>
     </main>
     
