--- a/exhibitions/01.html
+++ b/exhibitions/01.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="/css/styles.css" type="text/css">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:900i&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -53,6 +54,9 @@
                 <img src="01/2._Page_1.jpg">
                 <img src="01/2._Page_2.jpg">
                 <img src="01/3..jpg">
+                <img src="01/5..jpg">
+                <img src="01/6..jpg">
+                <img src="01/7..jpg">
             </div>
             <div class="text">
                 <div class="description">
