--- a/exhibitions/01.html
+++ b/exhibitions/01.html
@@ -14,6 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/styles.css" type="text/css">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+    <script src="https://kit.fontawesome.com/7413387a11.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:900i&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text&display=swap" rel="stylesheet">
 </head>
@@ -99,7 +100,7 @@
 
     </div>
     <footer>
-
+        <a href="https://www.instagram.com/nickkochornswasdigallery/"><i class="fab fa-instagram"></i></a>
     </footer>
 
 
