--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/styles.css" type="text/css">
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+        <script src="https://kit.fontawesome.com/7413387a11.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Montserrat:900i&display=swap" rel="stylesheet">
     </head>
     <body>
@@ -51,7 +52,7 @@
         
         </main>
         <footer>
-
+            <a href="https://www.instagram.com/nickkochornswasdigallery/"><i class="fab fa-instagram"></i></a>
         </footer>
 
         
