Updated phone number and changed DB photo

--- a/exhibitions/02.html
+++ b/exhibitions/02.html
@@ -57,7 +57,7 @@
 
         <div class="content">
             <div class="pictures">
-                <img src="02/02_diegoBarrientos_PBD.jpg">
+                <img src="02/02_diegoBarrientos.jpg">
             </div>
             <div class="text">
                 
@@ -106,7 +106,7 @@
                     
                     <p>
                         Gallery hours are Saturdays and Sundays 11am-5pm, by appointment only.
-                        Please call or text +1 740 360 7106 at least one hour in advance for reservations.
+                        Please call or text +1 213 437 3951 at least one hour in advance for reservations.
                     </p>
 
                 </div>
