Changed nick's title to founder/co-director

--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
                 
                 <li>
                     <h2>nick KOCHORNSWASDI</h2>
-                    <p>owner/co-director</p>
+                    <p>founder/co-director</p>
                 </li>
                 <li>
                     <h2>mingyan helen GU</h2>
