Updated bio on about page

--- a/about.html
+++ b/about.html
@@ -46,24 +46,25 @@
                 <li>
                     <div class="description">
                         <p>
-                            Nick Kochornswasdi Gallery (NKG) is a newly established for-profit contemporary art gallery. Founded by Nick
-                            Kochornswasdi in Spring 2019, the gallery focuses on presenting emerging artists through the gallery’s non-traditional
-                            platform and operation. The gallery currently has two locations. Site 1 is a white cube exhibition space located in
-                            Downtown Los Angeles, exhibiting works that can only be on view via a Google Chromecast. Site 2 is a private, domestic
-                            space situated in the co-director, MingYan Helen Gu’s residence in Rosemead. Site 2 aims to provide a context for works
-                            that may be on view in a client’s home after the purchase.
+                            Nick Kochornswasdi Gallery (NKG) is a newly established for-profit contemporary art gallery, founded by Nick
+                            Kochornswasdi in Spring 2019. The gallery is committed to presenting critically minded artists through the gallery’s
+                            non-traditional platform and operation. The gallery currently has two locations. Site 1 is a white cube exhibition space
+                            located in Downtown Los Angeles, exhibiting works that can only be on view via a Google Chromecast. Site 2 is a private,
+                            domestic space situated in the co-director, MingYan Helen Gu’s residence in Rosemead. Site 2 utilizes the aesthetics of
+                            American suburban home and aims to provide a context for works that may be on view in a client’s home after the
+                            purchase.
+
                         </p>
                         <p>
-                            NKG’s entire operating process is completely transparent and available to the public. The gallery’s mission is to
-                            provide a clear and precise understanding of the role and relationship between The Artist that The Industry has never
-                            publicly discussed. It is also an attempt to unveil and to create a new, fully-transparent, and objective process within
-                            The Industry. All information and communications between The Artist and The Gallery will be available and accessible to
-                            the public.
+                            NKG’s operating process is completely transparent and available to the public. The gallery’s mission is to provide a
+                            clear and precise understanding of the role and relationship between The Artist that The Industry has never publicly
+                            discussed. It is also an attempt to unveil and to create a new, fully transparent process within The Industry. All
+                            information and communications between The Artist and The Gallery will be available and accessible to the public.
+
                         </p>
                         <p>
                             The Gallery will present a semi-annual, public presentation of its curatorial decisions, past exhibitions, sales and
-                            expenses, achievements, and The Artists it represents. The Gallery will also produce a catalog at the end of the year to
-                            document its progression.
+                            expenses, achievements, and The Artists it represents.
                         </p>
                     </div>
                 </li>
