Updated contact page and added new css class, smaller-text

--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,9 @@
                     <p>co-director</p>
                 </li>
                 <li>
+                    <p>Inquiries:</p>
                     <p><a href="mailto:info@nickkochornswasdigallery.com">info@nickkochornswasdigallery.com</a></p>
+                    <p class="smaller-text">The gallery does not accept unsolicited submissions.</p>
                 </li>
                 <li>
                     <!-- Begin Mailchimp Signup Form -->
