Updated description on index

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>nick kochornswasdi GALLERY</title>
-        <meta name="description" content="A contemporary art gallery based in Los Angeles showing new and emerging artists">
+        <meta name="description" content="Nick Kochornswasdi Gallery (NKG) is a newly established for-profit contemporary art gallery, committed to presenting critically minded artists through the gallery’s non-traditional platform and operation.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/styles.css" type="text/css">
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
