--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
                     <p>co-director</p>
                 </li>
                 <li>
-                    <p>Inquiries:</p>
+                    <p>Inquiries & Sales:</p>
                     <p><a href="mailto:info@nickkochornswasdigallery.com">info@nickkochornswasdigallery.com</a></p>
                     <p class="smaller-text">The gallery does not accept unsolicited submissions.</p>
                 </li>
