--- a/about.html
+++ b/about.html
@@ -48,18 +48,17 @@
                         <p>
                             Nick Kochornswasdi Gallery (NKG) is a newly established for-profit contemporary art gallery, founded by Nick
                             Kochornswasdi in Spring 2019. The gallery is committed to presenting critically minded artists through the gallery’s
-                            non-traditional platform and operation. The gallery currently has two locations. Site 1 is a white cube exhibition space
-                            located in Downtown Los Angeles, exhibiting works that can only be on view via a Google Chromecast. Site 2 is a private,
-                            domestic space situated in the co-director, MingYan Helen Gu’s residence in Rosemead. Site 2 utilizes the aesthetics of
-                            American suburban home and aims to provide a context for works that may be on view in a client’s home after the
-                            purchase.
+                            non-traditional platform and operation. The gallery has two locations. Site 1 exists on a Google Chromecast, frequently
+                            available on view within a white cube exhibition space located in Downtown Los Angeles. Site 2 is a private, domestic
+                            space situated in the co-director, MingYan Helen Gu’s residence in Rosemead. Site 2 utilizes the aesthetics of American
+                            suburban home and aims to provide a context for works that may be on view in a client’s home after the purchase.
 
                         </p>
                         <p>
-                            NKG’s operating process is completely transparent and available to the public. The gallery’s mission is to provide a
-                            clear and precise understanding of the role and relationship between The Artist that The Industry has never publicly
-                            discussed. It is also an attempt to unveil and to create a new, fully transparent process within The Industry. All
-                            information and communications between The Artist and The Gallery will be available and accessible to the public.
+                            NKG’s operating process is transparent and available to the public. The gallery’s mission is to provide a clear and
+                            precise understanding of the role and relationship between The Artist that The Industry has never publicly discussed. It
+                            is also an attempt to unveil and to create a new, fully transparent process within The Industry. All information and
+                            communications between The Artist and The Gallery will be available and accessible to the public.
 
                         </p>
                         <p>
