Added current and upcoming, updated upcoming show to current

--- a/exhibitions/current.html
+++ b/exhibitions/current.html
@@ -10,9 +10,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>exhibitions - nick kochornswasdi GALLERY</title>
-    <meta name="description" content="Nick Kochornswasdi Gallery (NKG) is a newly established for-profit contemporary art gallery, committed to presenting critically minded artists through the gallery’s non-traditional platform and operation.">
+    <meta name="description"
+        content="Nick Kochornswasdi Gallery (NKG) is a newly established for-profit contemporary art gallery, committed to presenting critically minded artists through the gallery’s non-traditional platform and operation.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/styles.css" type="text/css">
+    <link rel="stylesheet" href="/css/styles.css" type="text/css">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -34,34 +35,33 @@
     <main>
         <nav>
             <ul>
-                <li><a href="index.html">home</a></li>
-                <li><a href="artists.html">artists</a></li>
-                <li><a href="exhibitions.html">exhibitions</a></li>
-                <li><a href="about.html">about</a></li>
-                <li><a href="contact.html">contact</a></li>
+                <li><a href="/index.html">home</a></li>
+                <li><a href="/artists.html">artists</a></li>
+                <li><a href="/exhibitions.html">exhibitions</a></li>
+                <li><a href="/about.html">about</a></li>
+                <li><a href="/contact.html">contact</a></li>
             </ul>
         </nav>
     </main>
     <div class="top-bar">
         <ul>
-            <li><a href="exhibitions/current.html">current</a></li>
-            <li><a href="exhibitions/upcoming.html">upcoming</a></li>
-            <li><a href="exhibitions/past.html">past</a></li>
+            <li><a href="current.html">current</a></li>
+            <li><a href="upcoming.html">upcoming</a></li>
+            <li><a href="past.html">past</a></li>
         </ul>
     </div>
     <div class="content">
         <ul>
             <li>
-                <h1>site 2</h1>
-                <h2>current:</h2>
-                <a href="exhibitions/02.html">
-                    <p>diego BARRIENTOS</p>
+                <a href="02.html">
+                    <h1>site 2</h1>
+                    <p>diego barrientos</p>
                     <p>paintings by diego</p>
-                    <p>august 3 - september 8 2019</p>
+                    <p>august 3 - september 6 2019</p>
                 </a>
             </li>
         </ul>
-    
+
     </div>
     <footer>
         <a href="https://www.instagram.com/nickkochornswasdigallery/"><i class="fab fa-instagram"></i></a>
