--- a/exhibitions/past.html
+++ b/exhibitions/past.html
@@ -44,8 +44,8 @@
     </main>
     <div class="top-bar">
         <ul>
-            <li><a href="/exhibitions.html">current</a></li>
-            <li><a href="02.html">upcoming</a></li>
+            <li><a href="current.html">current</a></li>
+            <li><a href="upcoming.html">upcoming</a></li>
             <li><a href="past.html">past</a></li>
         </ul>
     </div>
