--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <ul>
                 <li>
                     <a href="exhibitions/02.html">
-                        <h2>upcoming:</h2>
+                        <h2>current:</h2>
                         <p>diego BARRIENTOS</p>
                         <p>paintings by diego</p>
                         <p>august 3 - september 8 2019</p>
