Promoted helen to director

--- a/contact.html
+++ b/contact.html
@@ -67,11 +67,11 @@
                 
                 <li>
                     <h2>nick KOCHORNSWASDI</h2>
-                    <p>founder/co-director</p>
+                    
                 </li>
                 <li>
                     <h2>mingyan helen GU</h2>
-                    <p>co-director</p>
+                    <p>Director</p>
                 </li>
                 <li>
                     <p>Inquiries & Sales:</p>
