--- a/about.html
+++ b/about.html
@@ -70,7 +70,9 @@
                 </li>
                 <li>
                     <h1>site 1</h1>
-                    <p>coming soon!</p>
+                    <p>opening September 2019</p>
+                    <p>1206 Maple Ave Ste 534</p>
+                    <p>Los Angeles, CA 90015</p>
                 </li>
                 <li>
                     <h1>site 2</h1>
