Made somewhat responsive

--- a/artists/philipp_farra.html
+++ b/artists/philipp_farra.html
@@ -59,7 +59,7 @@
                 </p>
                 <p>
                     2019<br>
-                    <em>Haunts</em>, Location To be Announced, Los Angeles, CA (forthcoming)<br>
+                    <em>Haunts</em>, JOAN, Los Angeles, CA<br>
                     <em>Inaugurational Speeches</em>, Nick Kochornswasdi Gallery, Los Angeles, CA<br>
                     <em>(Building a Temporal Distance) or he traveled the same way the objects did</em>, A402 Gallery, California Institute of the
                     Arts, Valencia, CA<br>
