--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
                 </li>
                 <li>
                     <p>Inquiries & Sales:</p>
-                    <p><a href="mailto:info@nickkochornswasdigallery.com">info@nickkochornswasdigallery.com</a></p>
+                    <p class="email"><a href="mailto:info@nickkochornswasdigallery.com">info@nickkochornswasdigallery.com</a></p>
                     <p class="smaller-text">The gallery does not accept unsolicited submissions.</p>
                 </li>
                 <li>
