Updated 02 exhibition with photos and added diego plus other misc.

--- a/exhibitions/02.html
+++ b/exhibitions/02.html
@@ -122,6 +122,14 @@
 
                 </div>
             </div>
+            <div class="pictures">
+                <img src="/artists/img/diegoBarrientos/02/Paintings by Diego_install-1.jpg">
+                <img src="/artists/img/diegoBarrientos/02/Paintings by Diego_install-2.jpg">
+                <img src="/artists/img/diegoBarrientos/02/Paintings by Diego_install-3.jpg">
+                <img src="/artists/img/diegoBarrientos/02/Paintings by Diego_install-4.jpg">
+                <img src="/artists/img/diegoBarrientos/02/Paintings by Diego_install-5.jpg">
+                <img src="/artists/img/diegoBarrientos/02/Paintings by Diego_install-6.jpg">
+            </div>
         </div>
 
     </main>
