--- a/exhibitions/current.html
+++ b/exhibitions/current.html
@@ -45,7 +45,7 @@
     </main>
     <div class="top-bar">
         <ul>
-            <li><a href="current.html">current</a></li>
+            <li><a href="current.html" class="active">current</a></li>
             <li><a href="upcoming.html">upcoming</a></li>
             <li><a href="past.html">past</a></li>
         </ul>
@@ -57,7 +57,7 @@
                     <h1>site 2</h1>
                     <p>diego barrientos</p>
                     <p>paintings by diego</p>
-                    <p>august 3 - september 6 2019</p>
+                    <p>august 3 - september 8 2019</p>
                 </a>
             </li>
         </ul>
