--- a/exhibitions/past.html
+++ b/exhibitions/past.html
@@ -45,7 +45,7 @@
             <ul>
                 <li><a href="current.html">current</a></li>
                 <li><a href="upcoming.html">upcoming</a></li>
-                <li><a href="past.html">past</a></li>
+                <li><a href="past.html" class="active">past</a></li>
             </ul>
         </div>
         <div class="content">
