--- a/exhibitions/upcoming.html
+++ b/exhibitions/upcoming.html
@@ -45,7 +45,7 @@
         <div class="top-bar">
             <ul>
                 <li><a href="current.html">current</a></li>
-                <li><a href="upcoming.html">upcoming</a></li>
+                <li><a href="upcoming.html" class="active">upcoming</a></li>
                 <li><a href="past.html">past</a></li>
             </ul>
         </div>
