--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
                 <li><a href="index.html">home</a></li>
                 <li><a href="artists.html">artists</a></li>
                 <li><a href="exhibitions.html">exhibitions</a></li>
-                <li><a href="about.html">about</a></li>
+                <li><a href="about.html" class="active">about</a></li>
                 <li><a href="contact.html">contact</a></li>
             </ul>
         </nav>
