--- a/artists.html
+++ b/artists.html
@@ -35,7 +35,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">home</a></li>
-                <li><a href="artists.html">artists</a></li>
+                <li><a href="artists.html" class="active">artists</a></li>
                 <li><a href="exhibitions.html">exhibitions</a></li>
                 <li><a href="about.html">about</a></li>
                 <li><a href="contact.html">contact</a></li>
@@ -44,6 +44,9 @@
 
         <div class="content">
             <ul>
+                <li>
+                    <a href="artists/diego_barrientos.html">diego BARRIENTOS</a>
+                </li>
                 <li>
                     <a href="artists/philipp_farra.html">philipp FARRA</a>
                 </li>
