--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
                 <li><a href="artists.html">artists</a></li>
                 <li><a href="exhibitions.html">exhibitions</a></li>
                 <li><a href="about.html">about</a></li>
-                <li><a href="contact.html">contact</a></li>
+                <li><a href="contact.html" class="active">contact</a></li>
             </ul>
         </nav>
         <div class="content">
