--- a/exhibitions.html
+++ b/exhibitions.html
@@ -36,7 +36,7 @@
             <ul>
                 <li><a href="index.html">home</a></li>
                 <li><a href="artists.html">artists</a></li>
-                <li><a href="exhibitions.html">exhibitions</a></li>
+                <li><a href="exhibitions.html" class="active">exhibitions</a></li>
                 <li><a href="about.html">about</a></li>
                 <li><a href="contact.html">contact</a></li>
             </ul>
