--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <main>
             <nav>
                 <ul>
-                    <li><a href="index.html">home</a></li>
+                    <li><a href="index.html" class="active">home</a></li>
                     <li><a href="artists.html">artists</a></li>
                     <li><a href="exhibitions.html">exhibitions</a></li>
                     <li><a href="about.html">about</a></li>
