Made the pictures bigger, changed bio

--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
 
                         </p>
                         <p>
-                            The Gallery will present a semi-annual, public presentation of its curatorial decisions, past exhibitions, sales and
+                            The Gallery will present an annual, public presentation of its curatorial decisions, past exhibitions, sales and
                             expenses, achievements, and The Artists it represents.
                         </p>
                     </div>
