--- a/exhibitions/02.html
+++ b/exhibitions/02.html
@@ -61,7 +61,7 @@
         <div class="content">
             <div class="pictures">
                 <img src="/artists/img/diegoBarrientos/02/Paintings by Diego_install-1.jpg">
-                <div class="caption">installation view</div>
+                <div class="caption">Installation view</div>
                 <img src="/artists/img/diegoBarrientos/02/Paintings by Diego_install-2.jpg">
                 <div class="caption">
                     <p><em>self portrait (hanging)</em>, 2019</p>
@@ -87,6 +87,7 @@
                         <p><em>self portrait (self hug [small])</em>, 2018</p>
                         <p>24 x 20 in / 61 x 50.8 cm</p>
                         <p>House paint, paper, and parachute cord on canvas</p>
+                        <p>Installation view</p>
                     </div>
 
                     
