Added captions to diego's artist page. Added photo to index

--- a/artists/diego_barrientos.html
+++ b/artists/diego_barrientos.html
@@ -66,11 +66,37 @@
                 
                 <div class="pictures">
                     <img src="img/diegoBarrientos/02/Paintings by Diego_install-1.jpg">
+                    <div class="caption">
+                        <p><em>Paintings By Diego</em></p>
+                        <p>Installation view at Nick Kochornswasdi Gallery, Rosemead, 2019</p>   
+                    </div>
                     <img src="img/diegoBarrientos/02/Paintings by Diego_install-2.jpg">
-                    <img src="img/diegoBarrientos/02/Paintings by Diego_install-3.jpg">
+                    <div class="caption">
+                        <p><em>self portrait (hanging)</em>, 2019</p>
+                        <p>65 x 65 in / 165.1 x 165.1 cm</p>
+                        <p>House paint, paper, and parachute cord on canvas</p>
+                        <p>Installation view</p>
+                    </div>
                     <img src="img/diegoBarrientos/02/Paintings by Diego_install-4.jpg">
+                    <div class="caption">
+                        <p><em>self portrait (moon stare)</em>, 2019</p>
+                        <p>65 x 65 in / 165.1 x 165.1 cm</p>
+                        <p>House paint, paper, and parachute cord on canvas</p>
+                        <p>Installation view</p>
+                    </div>
                     <img src="img/diegoBarrientos/02/Paintings by Diego_install-5.jpg">
+                    <div class="caption">
+                        <p><em>self portrait (hanging in front of flag)</em>, 2018</p>
+                        <p>20 x 24 in / 50.8 x 61 cm</p>
+                        <p>House paint, paper, and parachute cord on canvas</p>
+                    </div>
                     <img src="img/diegoBarrientos/02/Paintings by Diego_install-6.jpg">
+                    <div class="caption">
+                        <p><em>self portrait (self hug [small])</em>, 2018</p>
+                        <p>24 x 20 in / 61 x 50.8 cm</p>
+                        <p>House paint, paper, and parachute cord on canvas</p>
+                        <p>Installation view</p>
+                    </div>
                 </div>
             </div>
 
