--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <script src="https://kit.fontawesome.com/7413387a11.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Montserrat:900i&display=swap" rel="stylesheet">
     </head>
-    <body>
+    <body class="home">
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
