Made styles more consistent and added 03 exhibit

--- a/about.html
+++ b/about.html
@@ -44,28 +44,41 @@
         <div class="content">
             <ul>
                 <li>
+                    <h1>Mission</h1>
                     <div class="description">
+                        <p>
+                            Nick Kochornswasdi Gallery (NKG) is committed to providing a platform for underappreciated, critically-minded artists
+                            through the gallery’s non-traditional operation while remaining independent of market trends.
+                        </p>
+                        <p>
+                            NKG assists and supports its artists through exhibitions and finding dedicated patrons to financially support the
+                            artists through sales. NKG considers the artists as its primary clients. With the ultimate goal of increasing the
+                            artists’ exposure, expand careers, and attract more prominent galleries that can further assist the artists.
+                        </p>
+                        <p>
+                            NKG’s operation is transparent and accessible to the public. NKG is dedicated to clearly define the role between The
+                            Artist and The Gallery that The Industry has never publicly discussed. It is also an attempt to unveil and to create a
+                            new transparent process within The Industry. All information and communications related to NKG are also available and
+                            accessible online.
+                        </p>
+
+
+                    </div>
+                </li>
+                <li>
+                    <h1>Bio</h1>
+                    <div class="description">
+                        
                         <p>
                             Nick Kochornswasdi Gallery (NKG) is a newly established for-profit contemporary art gallery, founded by Nick
                             Kochornswasdi in Spring 2019. The gallery is committed to presenting critically minded artists through the gallery’s
-                            non-traditional platform and operation. The gallery has two locations. Site 1 exists on a Google Chromecast, frequently
-                            available on view within a white cube exhibition space located in Downtown Los Angeles. Site 2 is a private, domestic
-                            space situated in the co-director, MingYan Helen Gu’s residence in Rosemead, a suburban neighborhood located just east
-                            of Los Angeles. Site 2 adopts the aesthetics of American suburban home and questions the understanding of a work when
-                            the work is on view in a different context.
+                            non-traditional platform and operation. The gallery has two locations. Site 1 is a traditional white cube exhibition
+                            space located in Downtown Los Angeles. Site 2 is a private, domestic space situated in the co-director, MingYan Helen
+                            Gu’s residence in Rosemead, a suburban neighborhood located just east of Los Angeles. Site 2 adopts the aesthetics of
+                            the American suburban home and questions the understanding of a work when the work is on view in a different context.
 
                         </p>
-                        <p>
-                            NKG’s operating process is transparent and accessible to the public. The gallery’s mission is to provide a clear and
-                            precise understanding of the role and relationship between The Artist that The Industry has never publicly discussed. It
-                            is also an attempt to unveil and to create a new, fully transparent process within The Industry. All information and
-                            communications between The Artist and The Gallery will be available and accessible to the public.
-
-                        </p>
-                        <p>
-                            The Gallery will present an annual, public presentation of its curatorial decisions, past exhibitions, sales and
-                            expenses, achievements, and The Artists it represents.
-                        </p>
+                        
                     </div>
                 </li>
                 <li>
