--- a/artists.html
+++ b/artists.html
@@ -45,10 +45,10 @@
         <div class="content">
             <ul>
                 <li>
-                    <a href="artists/diego_barrientos.html">diego BARRIENTOS</a>
+                    <a href="artists/diego_barrientos.html">diego barrientos</a>
                 </li>
                 <li>
-                    <a href="artists/philipp_farra.html">philipp FARRA</a>
+                    <a href="artists/philipp_farra.html">Philipp Farra</a>
                 </li>
             </ul>
 
