--- a/exhibitions.html
+++ b/exhibitions.html
@@ -54,9 +54,9 @@
                     <h1>site 2</h1>
                     <h2>current:</h2>
                     <a href="exhibitions/02.html">
-                        <p>diego BARRIENTOS</p>
-                        <p>paintings by diego</p>
-                        <p>august 3 - september 8 2019</p>
+                        <p>diego barrientos</p>
+                        <p>Paintings By Diego</p>
+                        <p>August 3 - September 8 2019</p>
                     </a>
                 </li>
             </ul>
