--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>nick kochornswasdi GALLERY</title>
+        <title>nick kochornswasdi gallery</title>
         <meta name="description" content="Nick Kochornswasdi Gallery (NKG) is a newly established for-profit contemporary art gallery, committed to presenting critically minded artists through the gallery’s non-traditional platform and operation.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/styles.css" type="text/css">
@@ -47,9 +47,9 @@
                 <li>
                     <a href="exhibitions/02.html">
                         <h2>current:</h2>
-                        <p>diego BARRIENTOS</p>
-                        <p>paintings by diego</p>
-                        <p>august 3 - september 8 2019</p>
+                        <p>diego barrientos</p>
+                        <p>Paintings By Diego</p>
+                        <p>August 3 - September 8 2019</p>
                     </a>
                 </li>
             </ul>
