Added time for 03

--- a/exhibitions/03.html
+++ b/exhibitions/03.html
@@ -9,7 +9,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>NKG Presentation - exhibitions - nick kochornswasdi GALLERY</title>
+    <title>NKG Presentation - exhibitions - nick kochornswasdi gallery</title>
     <meta name="description"
         content="Nick Kochornswasdi Gallery (NKG) is a newly established for-profit contemporary art gallery, committed to presenting critically minded artists through the gallery’s non-traditional platform and operation.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -70,6 +70,7 @@
                         <strong>MingYan Helen Gu</strong><br>
                         <em>Nick Kochornswasdi Gallery Presentation</em> <br>
                         September 14, 2019 <br>
+                        7 pm, followed by a public reception until 10 pm<br>
 
 
                         Site 1 // 1206 Maple Ave Ste 534, Los Angeles, CA 90015 <br>
