--- a/exhibitions.html
+++ b/exhibitions.html
@@ -51,6 +51,15 @@
         <div class="content">
             <ul>
                 <li>
+                    <h1>site 1</h1>
+                    <h2>upcoming:</h2>
+                    <a href="exhibitions/03.html">
+                        <p>MingYan Helen Gu</p>
+                        <p>Nick Kochornswasdi Gallery Presentation</p>
+                        <p>September 14 2019</p>
+                    </a>
+                </li>
+                <li>
                     <h1>site 2</h1>
                     <h2>current:</h2>
                     <a href="exhibitions/02.html">
