--- a/contact.html
+++ b/contact.html
@@ -66,11 +66,11 @@
             <ul>
                 
                 <li>
-                    <h2>nick KOCHORNSWASDI</h2>
+                    <h2>nick kochornswasdi</h2>
                     
                 </li>
                 <li>
-                    <h2>mingyan helen GU</h2>
+                    <h2>MingYan Helen Gu</h2>
                     <p>Director</p>
                 </li>
                 <li>
