--- a/artists/diego_barrientos.html
+++ b/artists/diego_barrientos.html
@@ -45,7 +45,7 @@
             </ul>
         </nav>
         <div class="content">
-            <h1 class="artist_name">diego BARRIENTOS</h1>
+            <h1 class="artist_name">diego barrientos</h1>
             <div class="description">
                 <p>
                     Diego Barrientos (b. 1987, Guatemala City, Guatemala) received his MFA from the California Institute of the Arts in
