--- a/artists/philipp_farra.html
+++ b/artists/philipp_farra.html
@@ -44,7 +44,7 @@
             </ul>
         </nav>
         <div class="content">
-            <h1 class="artist_name">philipp FARRA</h1>
+            <h1 class="artist_name">Philipp Farra</h1>
             <div class="description">
                 <p>
                     Philipp Farra (b. 1991, Schönebeck (Elbe), Germany), studied at Grundschule Käthe Kollwitz, Schönebeck, Germany;
