Removed helen, changed 03

--- a/exhibitions/03.html
+++ b/exhibitions/03.html
@@ -48,9 +48,8 @@
             <ul>
                 <li>
                     <a href="03.html">
-                        <p>MingYan Helen Gu</p>
-                        <p>Nick Kochornswasdi Gallery Presentation</p>
-                        <p>September 14 2019</p>
+                        <p>Nick Kochornswasdi Gallery Site 1 Grand Opening</p>
+                        <p>Sept. 14, 2019. 7 - 10 pm</p>
                     </a>
                 </li>
             </ul>
@@ -67,8 +66,7 @@
                 <div class="description">
 
                     <p>
-                        <strong>MingYan Helen Gu</strong><br>
-                        <em>Nick Kochornswasdi Gallery Presentation</em> <br>
+                        <em>Nick Kochornswasdi Gallery Site 1 Grand Opening</em> <br>
                         September 14, 2019 <br>
                         7 pm, followed by a public reception until 10 pm<br>
 
@@ -81,8 +79,7 @@
 
                     <p>
                         Nick Kochornswasdi Gallery Presentation is the inaugural presentation celebrating the opening of the gallery’s new
-                        Downtown Los Angeles location. Utilizing the aesthetics of a corporate presentation, the gallery’s director, MingYan
-                        Helen Gu, will present a Keynote presentation of its mission to the public.
+                        Downtown Los Angeles location. Come drink wine and talk with Nick Kochornswasdi and see the new space.
                     </p>
                     
 
