--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
         <div class="side_shit">
             <ul>
                 <li>
-                    <a href="exhibitions/02.html">
-                        <h2>current:</h2>
-                        <p>diego barrientos</p>
-                        <p>Paintings By Diego</p>
-                        <p>August 3 - September 8 2019</p>
+                    <a href="exhibitions/03.html">
+                        <h2>upcoming:</h2>
+                        <p>Nick Kochornswasdi Gallery Site 1 Grand Opening</p>
+                        <p>Sept. 14, 2019. 7 - 10 pm</p>
                     </a>
+                    
                 </li>
             </ul>
         </div>
