--- a/exhibitions.html
+++ b/exhibitions.html
@@ -54,19 +54,12 @@
                     <h1>site 1</h1>
                     <h2>upcoming:</h2>
                     <a href="exhibitions/03.html">
-                        <p>MingYan Helen Gu</p>
-                        <p>Nick Kochornswasdi Gallery Presentation</p>
+                        <p>Nick Kochornswasdi Gallery Site 1 Grand Opening</p>
                         <p>September 14 2019</p>
                     </a>
                 </li>
                 <li>
-                    <h1>site 2</h1>
-                    <h2>current:</h2>
-                    <a href="exhibitions/02.html">
-                        <p>diego barrientos</p>
-                        <p>Paintings By Diego</p>
-                        <p>August 3 - September 8 2019</p>
-                    </a>
+                    
                 </li>
             </ul>
         
