Updated pr for 03

--- a/exhibitions/03.html
+++ b/exhibitions/03.html
@@ -78,8 +78,8 @@
 
 
                     <p>
-                        Nick Kochornswasdi Gallery Presentation is the inaugural presentation celebrating the opening of the gallery’s new
-                        Downtown Los Angeles location. Come drink wine and talk with Nick Kochornswasdi and see the new space.
+                        Nick Kochornswasdi Gallery Site 1 Grand Opening is a celebration celebrating the opening of the gallery’s new
+                        Downtown Los Angeles location. Come drink wine and talk with Nick Kochornswasdi and see the new space, with surprises.
                     </p>
                     
 
